--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     //testImplementation 'junit:junit:4.12'
     //androidTestImplementation 'com.android.support.test:runner:1.0.2'
     //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-    implementation 'org.apache.commons:commons-lang3:3.0'
+//
+//    implementation 'org.apache.commons:commons-lang3:3.0'
+//    api 'com.google.firebase:firebase-messaging:17.3.3'
 }
